test/spec_vectors/align64/ok/module_21.wat
(module (memory i64 0) (func (f32.store align=4 (i64.const 0) (f32.const 1.0))))