test/spec_vectors/align64/fail/module_103.wat
(module (memory i64 0) (func (i64.store align=16 (i64.const 0) (i64.const 0))))